tests/snapshots/it__auth__auth_401_missing_key.snap
---
source: tests/auth.rs
expression: redacted(&r)
---
{
  "error": {
    "code": "UNAUTHORIZED",
    "message": "Missing or invalid API key",
    "requestId": "[request-id]"
  }
}
