tests/snapshots/it__auth__auth_403_missing_scope.snap
---
source: tests/auth.rs
expression: redacted(&r)
---
{
  "error": {
    "code": "FORBIDDEN",
    "message": "This key lacks the 'admin' scope",
    "requestId": "[request-id]"
  }
}
