tests/snapshots/it__auth__quota_429.snap
---
source: tests/auth.rs
expression: redacted(&denied)
---
{
  "error": {
    "code": "QUOTA_EXCEEDED",
    "message": "Quota of 2/min exceeded",
    "requestId": "[request-id]",
    "retryAfter": 60
  }
}
